# flashcore

./: .aiv.yml  .codecov.yml  .flake8  .gitignore  ABOUT_THIS_TEMPLATE.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  aiv_validation_result.json  claim_E.md  evidence.md  evidence_E.md  flashcore-f140-tests.packet.md  intent-evidence.md  intent.md  intent_Evidence.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  VERIFICATION_PACKET.md  VERIFICATION_PACKET_TASK_4.md  VERIFICATION_PACKET_TASK_5.md  rename_project.sh
.taskmaster/: config.json
artifacts/: task_4_ci_verification_report.md  task_4_implementation_summary.md  task_4_scheduler_optimization_audit.md
audit/: 01-understanding.md  02-static-audit.md  03-execution.md  04-goal.md  05-plan.md  HALT-REPORT.md  RESUME.md  forensic_pipeline.mjs
docs/: AIV_ENFORCEMENT_AUDIT.md  AIV_ENFORCEMENT_PLAN.md  PRD.md
flashcore/: __init__.py  __main__.py  base.py  cli.py  constants.py  exceptions.py  models.py  parser.py  review_manager.py  review_manager.py.bug-catalog.md  review_processor.py  scheduler.py  session_manager.py  yaml_models.py  yaml_validators.py
scripts/: migrate_to_datetime_fidelity.py
tests/: conftest.bug-catalog.md  conftest.py  fix_intent_evidence.py  test_base.py  test_conftest_review_fixtures.py  test_db.py  test_db_coverage.py  test_db_errors.bug-catalog.md  test_db_errors.py  test_db_row_to_review_error.py  test_db_row_to_review_error_handling.bug-catalog.md  test_db_row_to_review_error_handling.py  test_models.py  (+20 more)
(+349 files in other folders)
